--- a/FE-SIDASI/src/common/Cart/style.css
+++ b/FE-SIDASI/src/common/Cart/style.css
@@ -54,7 +54,7 @@
 }
 
 h4 span {
-  color: #e94560;
+  color: #0f0f0f;
   margin-left: 20px;
   font-weight: 500;
 }
@@ -81,7 +81,7 @@ h4 span {
 .incCart {
   background: none;
   border: 1px solid rgb(3 0 71 / 9%);
-  color: #e94560;
+  color: #131212;
 }
 
 .desCart {
@@ -96,7 +96,7 @@ h4 span {
 .cart-total h3 {
   font-size: 20px;
   font-weight: 500;
-  color: #e94560;
+  color: #0a0a0a;
 }
 
 .cart-total h2 {
@@ -104,11 +104,11 @@ h4 span {
   margin-bottom: 20px;
   border-bottom: 1px solid rgb(3 0 71 / 9%);
   padding-bottom: 10px;
-  color: #e94560;
+  color: #000000;
 }
 
 .no-items {
-  color: #e94560;
+  color: #000000;
   font-size: 18px;
   margin-top: 30px;
   height: 130px;
@@ -128,7 +128,7 @@ h4 span {
   font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
-  color: #e94560;
+  color: #080808;
 }
 
 .admin-info p {
