--- a/FE-SIDASI/src/components/wrapper/style.css
+++ b/FE-SIDASI/src/components/wrapper/style.css
@@ -22,3 +22,28 @@
   margin-top: 20px;
   color: grey;
 }
+.wrapper {
+  text-align: center;
+}
+.wrapper .img {
+  margin: auto;
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  margin-bottom: 20px;
+}
+.wrapper .img img {
+  width: 100%; /* Mengisi ruang yang tersedia dalam elemen .img */
+  height: auto; /* Mempertahankan aspek rasio gambar */
+}
+.wrapper .product {
+  padding: 30px;
+}
+.wrapper .product h3 {
+  font-weight: 500;
+}
+.wrapper p {
+  font-size: 15px;
+  margin-top: 20px;
+  color: grey;
+}
