--- a/FE-SIDASI/src/common/Profil/Profil.css
+++ b/FE-SIDASI/src/common/Profil/Profil.css
@@ -1,48 +1,49 @@
-.profile-body {
-    background: rgb(99, 39, 120)
-}
-
-.profile-form-control:focus {
-    box-shadow: none;
-    border-color: #BA68C8
-}
-
-.profile-button {
-    background: rgb(99, 39, 120);
-    box-shadow: none;
-    border: none
-}
-
-.profile-button:hover {
-    background: #682773
-}
-
-.profile-button:focus {
-    background: #682773;
-    box-shadow: none
-}
-
-.profile-button:active {
-    background: #682773;
-    box-shadow: none
-}
-
-.back:hover {
-    color: #682773;
-    cursor: pointer
-}
-
-.profile-labels {
-    font-size: 11px
-}
-
-.profile-add-experience:hover {
-    background: #BA68C8;
-    color: #fff;
-    cursor: pointer;
-    border: solid 1px #BA68C8
-}
-.container d_flex {
+.profil-container {
     display: flex;
-    justify-content: space-between; /* Ensure items are spaced out correctly */
-  }
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 50px;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1); /* Added shadow */
+
+}
+
+.left-box {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.right-box {
+    flex: 2;
+    padding: 20px;
+}
+
+.profil-photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.labels {
+    font-weight: bold;
+}
+
+.detail-item {
+    margin-bottom: 15px;
+}
+
+.profil-button {
+    width: 100%;
+    max-width: 200px;
+    background-color: #0f3460;;
+}
