--- a/FE-SIDASI/src/admin/AdminLayout.css
+++ b/FE-SIDASI/src/admin/AdminLayout.css
@@ -1,22 +1,45 @@
 .admin-layout {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
-  
-  .admin-content {
-    display: flex;
-    flex: 1;
-    margin-left: 250px; /* Adjust to the width of the sidebar */
-  }
-  
-  .admin-main {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  header.header_admin, footer.footer_admin {
-    width: calc(100% - 250px);
-    margin-left: 250px;
-  }
-  
+  display: flex;
+  min-height: 100vh;
+  background-color: #f5f6fa; /* Optional background color */
+}
+
+.navbar {
+  width: 250px;
+  height: 100vh;
+  background: #0f3460;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  overflow-y: auto;
+}
+
+.navbar.responsive {
+  width: 100%;
+}
+
+.admin-main-content {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  margin-left: 250px;
+  transition: margin-left 0.3s;
+}
+
+.admin-main-content.sidebar-open {
+  margin-left: 0;
+}
+
+.admin-main {
+  flex: 1;
+  padding: 20px;
+  background: #e7e7e7;
+}
+
+
+
