--- a/FE-SIDASI/src/admin/common/footer_admin/Footer_admin.css
+++ b/FE-SIDASI/src/admin/common/footer_admin/Footer_admin.css
@@ -1,10 +1,17 @@
 .footer_admin {
-    text-align: center;
-    padding: 10px;
-    background-color: #2C3E50;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
-  
+  text-align: center;
+  padding: 0px;
+  background-color: #ffffff;
+  color: white;
+  width: calc(100% - 250px); /* Adjust width to account for the sidebar */
+  margin-left: 0px; /* Align the footer with the sidebar */
+  position: fixed;
+  bottom: 0;
+}
+
+.footer_admin p {
+  color: black;
+  text-align: right;
+  margin: 5px 0 0 0; /* Add margin to move the paragraph downward */
+  padding: 5px;
+}
