--- a/FE-SIDASI/src/common/footer/style.css
+++ b/FE-SIDASI/src/common/footer/style.css
@@ -10,9 +10,7 @@
       font-style: italic;
     }
     footer .box img {
-      
-     
-      border-radius: 5px;
+      height: 100px;
     }
     footer .img i {
       font-size: 20px;
@@ -34,4 +32,3 @@
       margin-bottom: 10px;
       opacity: 0.5;
     }
-    
