--- a/FE-SIDASI/src/common/header/Search.css
+++ b/FE-SIDASI/src/common/header/Search.css
@@ -83,5 +83,15 @@
     background-color: #f5f5f5;
   }
   
+  .logo_header {
+    width: 100px;
+    height: 50px;
+    padding-right: 200px;
+  }
+  .logo_header img{
+    width: 150px;
+    height: 80px;
+  }
+
   
   
