--- a/FE-SIDASI/src/common/header/Search.css
+++ b/FE-SIDASI/src/common/header/Search.css
@@ -1,97 +1,64 @@
-/* Search.css */
-
 .profile-container {
-    position: relative;
-  }
-  
-  .profile-dropdown {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-  }
-  
-  .profile-menu {
-    padding: 10px;
-  }
-  
-  .profile-menu a {
-    display: block;
-    padding: 8px 0;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .profile-menu button {
-    display: block;
-    width: 100%;
-    padding: 8px 0;
-    background-color: transparent;
-    border: none;
-    text-align: left;
-    color: #333;
-    cursor: pointer;
-  }
-  
-  .profile-menu button:hover {
-    background-color: #f5f5f5;
-  }
-  
-  .profile-container {
-    position: relative;
-  }
-  
-  .profile-dropdown {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    border: 1px solid #ddd; /* Menambahkan border pada dropdown */
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    z-index: 10;
-    padding: 5px; /* Menambahkan padding pada dropdown */
-  }
-  
-  .profile-menu {
-    padding: 10px;
-  }
-  
-  .profile-menu a {
-    display: block;
-    padding: 8px 0;
-    text-decoration: none;
-    color: #333;
-  }
-  
-  .profile-menu button {
-    display: block;
-    width: 100%;
-    padding: 8px 0;
-    background-color: transparent;
-    border: none;
-    text-align: left;
-    color: #333;
-    cursor: pointer;
-  }
-  
-  .profile-menu button:hover {
-    background-color: #f5f5f5;
-  }
-  
-  .logo_header {
-    width: 100px;
-    height: 50px;
-    padding-right: 200px;
-  }
-  .logo_header img{
-    width: 150px;
-    height: 80px;
-  }
+  position: relative;
+}
 
-  
-  
+.profile-dropdown {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #fff;
+  border: 1px solid #ddd; /* Menambahkan border pada dropdown */
+  border-radius: 5px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  z-index: 10;
+  padding: 5px; /* Menambahkan padding pada dropdown */
+}
+
+.profile-menu {
+  padding: 10px;
+}
+
+.profile-menu a {
+  display: block;
+  padding: 8px 0;
+  text-decoration: none;
+  color: #333;
+}
+
+.profile-menu button {
+  display: block;
+  width: 100%;
+  padding: 8px 0;
+  background-color: transparent;
+  border: none;
+  text-align: left;
+  color: #333;
+  cursor: pointer;
+}
+
+.profile-menu button:hover {
+  background-color: #f5f5f5;
+}
+
+.logo_header {
+  width: 100px;
+  height: 50px;
+  padding-right: 200px;
+}
+
+.logo_header img {
+  width: 150px;
+  height: 80px;
+}
+
+.user-info {
+  font-size: 0.875rem; /* Mengatur ukuran font menjadi lebih kecil */
+  margin-right: 10px; /* Menambahkan margin kanan */
+  display: flex;
+  align-items: center;
+}
+
+.icon.f_flex.width {
+  display: flex;
+  align-items: center;
+}
