--- a/FE-SIDASI/src/admin/components/DetailProduct.css
+++ b/FE-SIDASI/src/admin/components/DetailProduct.css
@@ -1,7 +1,16 @@
+.detail_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+}
+
 .detail-product {
   padding: 20px;
   background-color: white;
   border-radius: 10px;
+  width: 600px;
+  box-shadow: 0 8px 8px rgba(0, 0, 0, 0.1); /* Added shadow for better visibility */
 }
 
 .product-name {
