--- a/FE-SIDASI/src/common/footer/style.css
+++ b/FE-SIDASI/src/common/footer/style.css
@@ -7,10 +7,11 @@
       margin-bottom: 30px;
       color: #ffffff;
       font-weight: 800;
-      font-style: italic;
+      font-family: 'Montserrat', sans-serif;
     }
     footer .box img {
-      height: 100px;
+      height: 130px;
+      width: 160PX;
     }
     footer .img i {
       font-size: 20px;
