--- a/FE-SIDASI/src/admin/components/DetailProduct.css
+++ b/FE-SIDASI/src/admin/components/DetailProduct.css
@@ -51,7 +51,7 @@
   margin: 10px 0 5px; /* Adjust margin to be closer to the p element */
 }
 
-.product-details p {
+.product-detailsadmin p {
   margin: 0 0 15px; /* Adjust margin to be closer to the h3 element */
   padding: 10px;
   border: 1px solid #ccc;
