--- a/FE-SIDASI/src/components/shops/style.css
+++ b/FE-SIDASI/src/components/shops/style.css
@@ -50,6 +50,8 @@
 .shop .product img {
   width: 100%;
   height: 100%;
+  margin-bottom: 20px;
+  border-radius: 3px;
 }
 .shop .product {
   transition: 0.5s;
