--- a/FE-SIDASI/src/admin/components/BookingDetail.css
+++ b/FE-SIDASI/src/admin/components/BookingDetail.css
@@ -1,15 +1,28 @@
-table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  th, td {
-    border: 1px solid #000;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  th {
-    background-color: #f2f2f2;
-  }
-  
+.bookingdetail table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.bookingdetail th, 
+.bookingdetail td {
+  border: 1px solid #000;
+  padding: 8px;
+  text-align: left;
+}
+
+.bookingdetail th {
+  background-color: #f2f2f2;
+}
+.receipt-container {
+  margin-left: 150px;
+  display: flex;
+}
+
+.receipt {
+  flex: 1;
+}
+
+.print-button {
+  margin-right: 90px;
+  margin-top: 470px;
+}
